system-apps/monitoring/argo/local/grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - private
  routes:
  - match: PathPrefix(`/monitor`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
